Added some changes to css and index files

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	</div>
 </header>
 <div class="container">
-	<h2>Can You Guess what letter I'm thinking of?</h2>
+	<h2>Your Guess Is As Good As Mine...</h2>
 	<div class="row">
 		
 		<div class="col-md-4">
@@ -35,7 +35,6 @@
 				<li class="list-group-item" id="guessesLeft">Guesses Left:</li>
 				<li class="list-group-item" id="letter">Your Guesses so far:</li>
 			</ul>
-
 			<img src="assets/images/psychic-img.jpg" alt="Psychic Image">
 		</div>
 		
