--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	
 		<meta charset="utf-8">
-		<title>Psychic Game(Basic)</title>
+		<title>Psychic Game</title>
 		<link rel="stylesheet" href="assets/css/reset.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	
